Unit Of Work With Repect To the City Entity Has Been Successfully Applied.

--- a/HelpFactory_Entities/HelpFactory_Entities.csproj
+++ b/HelpFactory_Entities/HelpFactory_Entities.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="App_User.cs" />
     <Compile Include="City.cs" />
+    <Compile Include="Encrypt_Password.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Province.cs" />
