--- a/HelPFactory_WEB/HelpFactory_WEB.csproj
+++ b/HelPFactory_WEB/HelpFactory_WEB.csproj
@@ -47,6 +47,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -125,20 +131,18 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\Account_LoginController.cs" />
     <Compile Include="Areas\Admin\Controllers\ChangePasswordController.cs" />
+    <Compile Include="Areas\Admin\Controllers\CityController.cs" />
     <Compile Include="Areas\Admin\Controllers\ContactController.cs" />
     <Compile Include="Areas\Admin\Controllers\DashBoardController.cs" />
     <Compile Include="Areas\Admin\Controllers\ForgotPasswordController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
-    <Compile Include="Areas\Admin\Controllers\PrivacyPolicyController.cs" />
     <Compile Include="Areas\Admin\Controllers\RegistrationController.cs" />
-    <Compile Include="Areas\Admin\Controllers\TermsAndConditionsController.cs" />
     <Compile Include="Areas\Security\Controllers\ForgetPasswordController.cs" />
     <Compile Include="Areas\Security\Controllers\HomeController.cs" />
     <Compile Include="Areas\Security\Controllers\LoginController.cs" />
     <Compile Include="Areas\Security\Controllers\RegistrationController.cs" />
-    <Compile Include="Areas\Security\Controllers\ResetPasswordController.cs" />
+    <Compile Include="Areas\Security\Controllers\ChangePasswordController.cs" />
     <Compile Include="Areas\Security\SecurityAreaRegistration.cs" />
-    <Compile Include="Controllers\app_userController.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -6635,16 +6639,20 @@
     <Content Include="Areas\Security\Views\Home\Index.cshtml" />
     <Content Include="Areas\Security\Views\Login\login.cshtml" />
     <Content Include="Areas\Security\Views\Login\logout.cshtml" />
-    <Content Include="Areas\Security\Views\Registration\registration.cshtml" />
     <Content Include="Areas\Security\Views\ForgetPassword\forgetPassword.cshtml" />
     <Content Include="Areas\Security\Views\ResetPassword\resetPassword.cshtml" />
-    <Content Include="Areas\Admin\Views\Contact\ContactUs.cshtml" />
-    <Content Include="Areas\Admin\Views\PrivacyPolicy\PrivacyPolicy.cshtml" />
-    <Content Include="Areas\Admin\Views\TermsAndConditions\TermsAndConditions.cshtml" />
     <Content Include="Areas\Admin\Views\Account_Login\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\Registration\Index.cshtml" />
+    <Content Include="Areas\Security\Views\Registration\Index.cshtml" />
     <Content Include="Areas\Admin\Views\DashBoard\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\ForgotPassword\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Province\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Province\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Province\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Province\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Province\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Registration\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Registration\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\City\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\City\Create.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -6689,8 +6697,10 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\APP_USERS\" />
     <Folder Include="Areas\Admin\Views\ChangePassword\" />
     <Folder Include="Areas\Admin\Views\Login\" />
+    <Folder Include="Areas\Admin\Views\Service_Category\" />
     <Folder Include="Areas\Security\Models\" />
     <Folder Include="assets\vendors\general\summernote\coverage\HeadlessChrome 0.0.0 %28Mac OS X 10.14.0%29\html\src\" />
     <Folder Include="assets\vendors\general\summernote\coverage\HeadlessChrome 0.0.0 %28Mac OS X 10.14.1%29\html\src\" />
@@ -6714,6 +6724,10 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\HelpFactory.DataBase\HelpFactory.DataBase.csproj">
+      <Project>{EF17C358-71C5-433A-83FD-92D9827F35D2}</Project>
+      <Name>HelpFactory.DataBase</Name>
+    </ProjectReference>
     <ProjectReference Include="..\HelpFactory_Entities\HelpFactory_Entities.csproj">
       <Project>{b74ea22f-6677-423b-a930-8062af8491b4}</Project>
       <Name>HelpFactory_Entities</Name>
